[package]
name = "cli-builder-macros"
version = "0.1.1"
edition = "2024"
license = "Unlicense"
authors = ["Jack Hamilton jackham800@gmail.com"]
keywords = ["cli", "macro"]
categories = ["command-line-interface"]
repository = "https://github.com/jackhamilton/cli-builder-macros"
description = "Macro to make cli creation easy. Also generates commands for help, version, and zsh completions."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.40"
syn = { version = "2.0.106", features = ["full"] }
